--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>My awesome webpage!</title>
     </head>
+    <h1>WELCOME TO MY PAGE</h1>
     Hello there, awesome person! 
   </body>
 </html>
