--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>My awesome webpage!</title>
     </head>
     <h1>WELCOME TO MY PAGE</h1>
-    Hello there, awesome person! 
+    Hello there, awesome person!
+    <img src="https://avatars.githubusercontent.com/u/84090655?v=4">
   </body>
 </html>
