--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <h1>WELCOME TO MY PAGE</h1>
     Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/84090655?v=4">
-  </body>
+    <ol>
+    <li>INSTAGRAM</li>
+    <li>TELEGRAM</li>
+    <li>SNAPCHAT</li>
+    </ol>
+    <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+   </ul>
+ </body>
 </html>
