--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li>This</li>
     <li>Is an</li>
     <li>Unordered list</li>
-   </ul>
+    <li><a href="https://github.com">This is a link to GitHub!</a></li>
+    </ul>
  </body>
 </html>
