--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <head>
       <title>My awesome webpage!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <h1>WELCOME TO MY PAGE</h1>
     Hello there, awesome person!
